--- a/essay/1024_md.Rmd
+++ b/essay/1024_md.Rmd
@@ -4,8 +4,7 @@ author: "Lizhao"
 date: '2022-10-24'
 
 output:
-  pdf_document :
-    fig_caption: true
+  md_document:
     number_sections: true
  
 ---
